[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tdt"
version = "0.1.0"
description = "Writing tool with a single input area and a visible countdown"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=8.1.1",
]

[project.scripts]
tdt = "main:main"

[tool.hatch.build.targets.wheel]
include = ["main.py"]

[tool.hatch.build.targets.sdist]
include = ["main.py", "README.md", "pyproject.toml"]
